--- a/index.html
+++ b/index.html
@@ -4,15 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>my portfolio site </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
- <h1> tmi onke sondor  </h1>
-  <h3> tomara onke valo </h3>
+    <section class="top-bennar">
+   
+            <div class="row-colm">
+                <h1 class="wlc">Welcome To</h1>
+                <h1 class="wlc"><span class="wlc">Peter Parker </span>World  </h1>
 
- <div> this a shariful islam</div>
+                <h3>Build Climber and Train Stopper</h3>
 
- <span> i wannna say samething so can you help me </span>
+           <div class="pragrph">     <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p></div>
+                <a class="link-icon" href="http://shaifulislam.great-site.net/?i=1">HERE ME</a>
+
+
+
+            </div>
+            <div class="colm-row">
+                <img slot="my-bg.png">
+                <img src="my-bg.png" alt="shariful">
+
+            </div>
+
+
+    
+
+
+
+    </section>
+ 
     
 </body>
 </html>
